k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: quiz_db
            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  name: api-db-credentials
                  key: DATABASE_URL
            - name: POSTGRES_USER
              value: postgres
          image: postgres:15-alpine
          livenessProbe:
            exec:
              command:
                - pg_isready -U postgres
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 10
          name: postgres
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /run/secrets
              name: postgres-password
              subPath: postgres-password
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
      restartPolicy: Always
      volumes:
        - name: postgres-password
          secret:
            items:
              - key: postgres-password
                path: postgres-password
            secretName: postgres-password
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
