k8s/feedback_service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: feedback-service
  name: feedback-service
spec:
  ports:
    - name: "3100"
      port: 3100
      targetPort: 3000
  selector:
    io.kompose.service: feedback-service
