k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
      nodePort: 30080
